# rustoku

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml  release.yml
src/: cli.rs  main.rs
